goresponder/yaml/GoResponder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: goresponder
# uncomment if needed
#   app.kubernetes.io/component: demo
#   app.kubernetes.io/instance: demo
 name: goresponder
 namespace: flask-alt
spec:
 # securityContext:
 #   allowPrivilegeEscalation: false
 replicas: 2
 selector:
   matchLabels:
     deployment: goresponder
 template:
   metadata:
     labels:
       deployment: goresponder
   spec:
     containers:
       - image: quay.io/rh-ee-jbrawley/goresponder:a96c7c3
         imagePullPolicy: IfNotPresent
         name: goresponder
         ports:
           - containerPort: 8080
         # fix pod security
         #securityContext:
           #allowPrivilegeEscalation: false
           #capabilities:
             #drop: ["ALL"]
           #runAsNonRoot: true
           #seccompProfile:
             #type: RuntimeDefault
