goresponder/yaml/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goresp-svc
spec:
  selector:
    deployment: goresponder
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
